tests/agl/rejections/scope/break_outside_loop.agl
var x: int = 0
x := x + 1
break
